# python-project-lvl2

./: .coveragerc  .gitignore  .travis.yml  Makefile  README.md  README.md.save  coverage.xml  gendiff.py  pyproject.toml
gendiff/: __init__.py  cli.py  diff.py  gendiff.py  generate_diff.py  parsers.py  py_to_json.py  renderer.py  status.py  status_list.py
gendiff.egg-info/: PKG-INFO  SOURCES.txt
gendiff/format/: __init__.py  default_view.py  json_view.py  plain_view.py
gendiff/formatters/: __init__.py  default_view.py  json_view.py  plain_view.py
gendiff/scripts/: gendiff.py
stepanenko_artem_gendiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
testfiles/: test1.json  test2.json
tests/: gendiff_test.py  simple_test.py  test_default_view.py  test_gendiff.py  test_json_view.py  test_plain_view.py
tests/fixtures/: default_diff  diff  diff.save  expected_tree_diff  generate_diff_results  internal_diff  json_diff  paths.txt  plain_diff  rendered_diff
tests/fixtures/testfiles/: after.json  before.json  test1.json  test1.yml  test2.json  test2.yml  test3.json  test4.json
