[tool.poetry]
name = "stepanenko-artem-gendiff"
version = "0.0.1"
description = "Package for generate difference between two files"
authors = ["Artem Stepanenko <artem.stepanenko.ks.ua@gmail.com>"]
packages = [
    { include = "gendiff.py" },
]


[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gendiff = 'gendiff:main'
