[tool.poetry]
name = "stepanenko-artem-gendiff"
version = "0.1.39"
description = "CLI-utilite for generate difference between two config files"
authors = ["Artem Stepanenko <artem.stepanenko.ks.ua@gmail.com>"]
packages = [
	{include="gendiff"},
]

[tool.poetry.dependencies]
python = "^3.5"
pyyaml = "^5.2"
[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
gendiff = 'gendiff.scripts.gendiff:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

